samples/_failures_safe/1761634526_a34862_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1eddea73.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_1eddea73.c:148:20: error: missing terminating " character
  148 |             printf("Invalid algorithm\n
      |                    ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1eddea73.c:148:13: error: expected expression at end of input
  148 |             printf("Invalid algorithm\n
      |             ^~~~~~
./samples/SAFE/__tmp_1eddea73.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1eddea73.c:148:13: error: expected declaration or statement at end of input
